// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datetime create component 1`] = `
<DateTime
  className=""
  closeOnSelect={false}
  closeOnTab={true}
  dateFormat={true}
  defaultValue=""
  input={true}
  inputProps={Object {}}
  isWeek={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  shortcuts={Array []}
  showWeeks={false}
  strictParsing={true}
  timeConstraints={Object {}}
  timeFormat={true}
  utc={false}
>
  <div
    className="el-datetime el-static"
    data-value="days1512541077455.6807"
  >
    <Input
      icon={
        <i
          className="fa fa-calendar-minus-o"
        />
      }
      key="i"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    >
      <div
        className="el-input"
      >
        <span
          className="el-input-icon"
        >
          <i
            className="fa fa-calendar-minus-o"
          />
        </span>
        <input
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <div
      className="el-datetime-picker"
      key="dt"
    >
      <CalendarContainer
        view="days"
        viewProps={
          Object {
            "dateFormat": "MM/DD/YYYY",
            "isValidDate": undefined,
            "isWeek": false,
            "localMoment": [Function],
            "renderDay": undefined,
            "renderMonth": undefined,
            "renderYear": undefined,
            "selectedDate": undefined,
            "setDate": [Function],
            "setTime": [Function],
            "shortcuts": Array [],
            "showView": [Function],
            "showWeeks": false,
            "timeConstraints": Object {},
            "timeFormat": "h:mm A",
            "uid": "days1512541077455.6807",
            "updateOn": "days",
            "updateSelectedDate": [Function],
            "updateTime": [Function],
            "value": undefined,
            "viewDate": "2017-11-30T16:00:00.000Z",
          }
        }
      >
        <DayView
          dateFormat="MM/DD/YYYY"
          isValidDate={[Function]}
          isWeek={false}
          localMoment={[Function]}
          renderDay={[Function]}
          renderWeeksTitle={[Function]}
          setDate={[Function]}
          setTime={[Function]}
          shortcuts={Array []}
          showView={[Function]}
          showWeeks={false}
          timeConstraints={Object {}}
          timeFormat="h:mm A"
          uid="days1512541077455.6807"
          updateOn="days"
          updateSelectedDate={[Function]}
          updateTime={[Function]}
          viewDate={"2017-11-30T16:00:00.000Z"}
        >
          <div
            className="el-datetime-days"
            data-value="days1512541077455.6807"
          >
            <table>
              <thead
                key="th"
              >
                <tr
                  key="h"
                >
                  <th
                    className="el-datetime-prev"
                    key="p"
                  >
                    <span
                      onClick={[Function]}
                    >
                      ‹
                    </span>
                  </th>
                  <th
                    className="el-datetime-switch"
                    colSpan="5"
                    data-value={11}
                    key="s"
                    onClick={[Function]}
                  >
                    December 2017
                  </th>
                  <th
                    className="el-datetime-next"
                    key="n"
                  >
                    <span
                      onClick={[Function]}
                    >
                      ›
                    </span>
                  </th>
                </tr>
                <tr
                  key="d"
                >
                  <th
                    className="dow"
                    key="Su0"
                  >
                    Su
                  </th>
                  <th
                    className="dow"
                    key="Mo1"
                  >
                    Mo
                  </th>
                  <th
                    className="dow"
                    key="Tu2"
                  >
                    Tu
                  </th>
                  <th
                    className="dow"
                    key="We3"
                  >
                    We
                  </th>
                  <th
                    className="dow"
                    key="Th4"
                  >
                    Th
                  </th>
                  <th
                    className="dow"
                    key="Fr5"
                  >
                    Fr
                  </th>
                  <th
                    className="dow"
                    key="Sa6"
                  >
                    Sa
                  </th>
                </tr>
              </thead>
              <tbody
                key="tb"
              >
                <tr
                  key="6"
                >
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_26"
                    onClick={[Function]}
                  >
                    26
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_27"
                    onClick={[Function]}
                  >
                    27
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_28"
                    onClick={[Function]}
                  >
                    28
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_29"
                    onClick={[Function]}
                  >
                    29
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_30"
                    onClick={[Function]}
                  >
                    30
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_1"
                    onClick={[Function]}
                  >
                    1
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_2"
                    onClick={[Function]}
                  >
                    2
                  </td>
                </tr>
                <tr
                  key="13"
                >
                  <td
                    className="el-datetime-day"
                    key="12_3"
                    onClick={[Function]}
                  >
                    3
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_4"
                    onClick={[Function]}
                  >
                    4
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_5"
                    onClick={[Function]}
                  >
                    5
                  </td>
                  <td
                    className="el-datetime-day el-datetime-today"
                    key="12_6"
                    onClick={[Function]}
                  >
                    6
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_7"
                    onClick={[Function]}
                  >
                    7
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_8"
                    onClick={[Function]}
                  >
                    8
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_9"
                    onClick={[Function]}
                  >
                    9
                  </td>
                </tr>
                <tr
                  key="20"
                >
                  <td
                    className="el-datetime-day"
                    key="12_10"
                    onClick={[Function]}
                  >
                    10
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_11"
                    onClick={[Function]}
                  >
                    11
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_12"
                    onClick={[Function]}
                  >
                    12
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_13"
                    onClick={[Function]}
                  >
                    13
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_14"
                    onClick={[Function]}
                  >
                    14
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_15"
                    onClick={[Function]}
                  >
                    15
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_16"
                    onClick={[Function]}
                  >
                    16
                  </td>
                </tr>
                <tr
                  key="27"
                >
                  <td
                    className="el-datetime-day"
                    key="12_17"
                    onClick={[Function]}
                  >
                    17
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_18"
                    onClick={[Function]}
                  >
                    18
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_19"
                    onClick={[Function]}
                  >
                    19
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_20"
                    onClick={[Function]}
                  >
                    20
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_21"
                    onClick={[Function]}
                  >
                    21
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_22"
                    onClick={[Function]}
                  >
                    22
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_23"
                    onClick={[Function]}
                  >
                    23
                  </td>
                </tr>
                <tr
                  key="34"
                >
                  <td
                    className="el-datetime-day"
                    key="12_24"
                    onClick={[Function]}
                  >
                    24
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_25"
                    onClick={[Function]}
                  >
                    25
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_26"
                    onClick={[Function]}
                  >
                    26
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_27"
                    onClick={[Function]}
                  >
                    27
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_28"
                    onClick={[Function]}
                  >
                    28
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_29"
                    onClick={[Function]}
                  >
                    29
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_30"
                    onClick={[Function]}
                  >
                    30
                  </td>
                </tr>
                <tr
                  key="41"
                >
                  <td
                    className="el-datetime-day"
                    key="12_31"
                    onClick={[Function]}
                  >
                    31
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_1"
                    onClick={[Function]}
                  >
                    1
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_2"
                    onClick={[Function]}
                  >
                    2
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_3"
                    onClick={[Function]}
                  >
                    3
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_4"
                    onClick={[Function]}
                  >
                    4
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_5"
                    onClick={[Function]}
                  >
                    5
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_6"
                    onClick={[Function]}
                  >
                    6
                  </td>
                </tr>
              </tbody>
              <tfoot
                key="tf"
              >
                <tr>
                  <td
                    className="el-datetime-timetoggle"
                    colSpan="7"
                    onClick={[Function]}
                  >
                    12:00 AM
                  </td>
                </tr>
              </tfoot>
            </table>
          </div>
        </DayView>
      </CalendarContainer>
    </div>
  </div>
</DateTime>
`;

exports[`Datetime define dateFormat 1`] = `
<DateTime
  className=""
  closeOnSelect={false}
  closeOnTab={true}
  dateFormat={true}
  defaultValue=""
  input={true}
  inputProps={Object {}}
  isWeek={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  shortcuts={Array []}
  showWeeks={false}
  strictParsing={true}
  timeConstraints={Object {}}
  timeFormat={true}
  utc={false}
>
  <div
    className="el-datetime el-static"
    data-value="days1512541077545.0945"
  >
    <Input
      icon={
        <i
          className="fa fa-calendar-minus-o"
        />
      }
      key="i"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    >
      <div
        className="el-input"
      >
        <span
          className="el-input-icon"
        >
          <i
            className="fa fa-calendar-minus-o"
          />
        </span>
        <input
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <div
      className="el-datetime-picker"
      key="dt"
    >
      <CalendarContainer
        view="days"
        viewProps={
          Object {
            "dateFormat": "MM/DD/YYYY",
            "isValidDate": undefined,
            "isWeek": false,
            "localMoment": [Function],
            "renderDay": undefined,
            "renderMonth": undefined,
            "renderYear": undefined,
            "selectedDate": undefined,
            "setDate": [Function],
            "setTime": [Function],
            "shortcuts": Array [],
            "showView": [Function],
            "showWeeks": false,
            "timeConstraints": Object {},
            "timeFormat": "h:mm A",
            "uid": "days1512541077545.0945",
            "updateOn": "days",
            "updateSelectedDate": [Function],
            "updateTime": [Function],
            "value": undefined,
            "viewDate": "2017-11-30T16:00:00.000Z",
          }
        }
      >
        <DayView
          dateFormat="MM/DD/YYYY"
          isValidDate={[Function]}
          isWeek={false}
          localMoment={[Function]}
          renderDay={[Function]}
          renderWeeksTitle={[Function]}
          setDate={[Function]}
          setTime={[Function]}
          shortcuts={Array []}
          showView={[Function]}
          showWeeks={false}
          timeConstraints={Object {}}
          timeFormat="h:mm A"
          uid="days1512541077545.0945"
          updateOn="days"
          updateSelectedDate={[Function]}
          updateTime={[Function]}
          viewDate={"2017-11-30T16:00:00.000Z"}
        >
          <div
            className="el-datetime-days"
            data-value="days1512541077545.0945"
          >
            <table>
              <thead
                key="th"
              >
                <tr
                  key="h"
                >
                  <th
                    className="el-datetime-prev"
                    key="p"
                  >
                    <span
                      onClick={[Function]}
                    >
                      ‹
                    </span>
                  </th>
                  <th
                    className="el-datetime-switch"
                    colSpan="5"
                    data-value={11}
                    key="s"
                    onClick={[Function]}
                  >
                    December 2017
                  </th>
                  <th
                    className="el-datetime-next"
                    key="n"
                  >
                    <span
                      onClick={[Function]}
                    >
                      ›
                    </span>
                  </th>
                </tr>
                <tr
                  key="d"
                >
                  <th
                    className="dow"
                    key="Su0"
                  >
                    Su
                  </th>
                  <th
                    className="dow"
                    key="Mo1"
                  >
                    Mo
                  </th>
                  <th
                    className="dow"
                    key="Tu2"
                  >
                    Tu
                  </th>
                  <th
                    className="dow"
                    key="We3"
                  >
                    We
                  </th>
                  <th
                    className="dow"
                    key="Th4"
                  >
                    Th
                  </th>
                  <th
                    className="dow"
                    key="Fr5"
                  >
                    Fr
                  </th>
                  <th
                    className="dow"
                    key="Sa6"
                  >
                    Sa
                  </th>
                </tr>
              </thead>
              <tbody
                key="tb"
              >
                <tr
                  key="6"
                >
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_26"
                    onClick={[Function]}
                  >
                    26
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_27"
                    onClick={[Function]}
                  >
                    27
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_28"
                    onClick={[Function]}
                  >
                    28
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_29"
                    onClick={[Function]}
                  >
                    29
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_30"
                    onClick={[Function]}
                  >
                    30
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_1"
                    onClick={[Function]}
                  >
                    1
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_2"
                    onClick={[Function]}
                  >
                    2
                  </td>
                </tr>
                <tr
                  key="13"
                >
                  <td
                    className="el-datetime-day"
                    key="12_3"
                    onClick={[Function]}
                  >
                    3
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_4"
                    onClick={[Function]}
                  >
                    4
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_5"
                    onClick={[Function]}
                  >
                    5
                  </td>
                  <td
                    className="el-datetime-day el-datetime-today"
                    key="12_6"
                    onClick={[Function]}
                  >
                    6
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_7"
                    onClick={[Function]}
                  >
                    7
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_8"
                    onClick={[Function]}
                  >
                    8
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_9"
                    onClick={[Function]}
                  >
                    9
                  </td>
                </tr>
                <tr
                  key="20"
                >
                  <td
                    className="el-datetime-day"
                    key="12_10"
                    onClick={[Function]}
                  >
                    10
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_11"
                    onClick={[Function]}
                  >
                    11
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_12"
                    onClick={[Function]}
                  >
                    12
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_13"
                    onClick={[Function]}
                  >
                    13
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_14"
                    onClick={[Function]}
                  >
                    14
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_15"
                    onClick={[Function]}
                  >
                    15
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_16"
                    onClick={[Function]}
                  >
                    16
                  </td>
                </tr>
                <tr
                  key="27"
                >
                  <td
                    className="el-datetime-day"
                    key="12_17"
                    onClick={[Function]}
                  >
                    17
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_18"
                    onClick={[Function]}
                  >
                    18
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_19"
                    onClick={[Function]}
                  >
                    19
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_20"
                    onClick={[Function]}
                  >
                    20
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_21"
                    onClick={[Function]}
                  >
                    21
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_22"
                    onClick={[Function]}
                  >
                    22
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_23"
                    onClick={[Function]}
                  >
                    23
                  </td>
                </tr>
                <tr
                  key="34"
                >
                  <td
                    className="el-datetime-day"
                    key="12_24"
                    onClick={[Function]}
                  >
                    24
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_25"
                    onClick={[Function]}
                  >
                    25
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_26"
                    onClick={[Function]}
                  >
                    26
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_27"
                    onClick={[Function]}
                  >
                    27
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_28"
                    onClick={[Function]}
                  >
                    28
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_29"
                    onClick={[Function]}
                  >
                    29
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_30"
                    onClick={[Function]}
                  >
                    30
                  </td>
                </tr>
                <tr
                  key="41"
                >
                  <td
                    className="el-datetime-day"
                    key="12_31"
                    onClick={[Function]}
                  >
                    31
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_1"
                    onClick={[Function]}
                  >
                    1
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_2"
                    onClick={[Function]}
                  >
                    2
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_3"
                    onClick={[Function]}
                  >
                    3
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_4"
                    onClick={[Function]}
                  >
                    4
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_5"
                    onClick={[Function]}
                  >
                    5
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_6"
                    onClick={[Function]}
                  >
                    6
                  </td>
                </tr>
              </tbody>
              <tfoot
                key="tf"
              >
                <tr>
                  <td
                    className="el-datetime-timetoggle"
                    colSpan="7"
                    onClick={[Function]}
                  >
                    12:00 AM
                  </td>
                </tr>
              </tfoot>
            </table>
          </div>
        </DayView>
      </CalendarContainer>
    </div>
  </div>
</DateTime>
`;

exports[`Datetime define defaultValue 1`] = `
<DateTime
  className=""
  closeOnSelect={false}
  closeOnTab={true}
  dateFormat={true}
  defaultValue={"2017-12-06T06:17:57.509Z"}
  input={true}
  inputProps={Object {}}
  isWeek={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  shortcuts={Array []}
  showWeeks={false}
  strictParsing={true}
  timeConstraints={Object {}}
  timeFormat={true}
  utc={false}
>
  <div
    className="el-datetime el-static"
    data-value="days1512541077511.075"
  >
    <Input
      icon={
        <i
          className="fa fa-calendar-minus-o"
        />
      }
      key="i"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
      value="12/06/2017 2:17 PM"
    >
      <div
        className="el-input"
      >
        <span
          className="el-input-icon"
        >
          <i
            className="fa fa-calendar-minus-o"
          />
        </span>
        <input
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="12/06/2017 2:17 PM"
        />
      </div>
    </Input>
    <div
      className="el-datetime-picker"
      key="dt"
    >
      <CalendarContainer
        view="days"
        viewProps={
          Object {
            "dateFormat": "MM/DD/YYYY",
            "isValidDate": undefined,
            "isWeek": false,
            "localMoment": [Function],
            "renderDay": undefined,
            "renderMonth": undefined,
            "renderYear": undefined,
            "selectedDate": "2017-12-06T06:17:57.509Z",
            "setDate": [Function],
            "setTime": [Function],
            "shortcuts": Array [],
            "showView": [Function],
            "showWeeks": false,
            "timeConstraints": Object {},
            "timeFormat": "h:mm A",
            "uid": "days1512541077511.075",
            "updateOn": "days",
            "updateSelectedDate": [Function],
            "updateTime": [Function],
            "value": undefined,
            "viewDate": "2017-11-30T16:00:00.000Z",
          }
        }
      >
        <DayView
          dateFormat="MM/DD/YYYY"
          isValidDate={[Function]}
          isWeek={false}
          localMoment={[Function]}
          renderDay={[Function]}
          renderWeeksTitle={[Function]}
          selectedDate={"2017-12-06T06:17:57.509Z"}
          setDate={[Function]}
          setTime={[Function]}
          shortcuts={Array []}
          showView={[Function]}
          showWeeks={false}
          timeConstraints={Object {}}
          timeFormat="h:mm A"
          uid="days1512541077511.075"
          updateOn="days"
          updateSelectedDate={[Function]}
          updateTime={[Function]}
          viewDate={"2017-11-30T16:00:00.000Z"}
        >
          <div
            className="el-datetime-days"
            data-value="days1512541077511.075"
          >
            <table>
              <thead
                key="th"
              >
                <tr
                  key="h"
                >
                  <th
                    className="el-datetime-prev"
                    key="p"
                  >
                    <span
                      onClick={[Function]}
                    >
                      ‹
                    </span>
                  </th>
                  <th
                    className="el-datetime-switch"
                    colSpan="5"
                    data-value={11}
                    key="s"
                    onClick={[Function]}
                  >
                    December 2017
                  </th>
                  <th
                    className="el-datetime-next"
                    key="n"
                  >
                    <span
                      onClick={[Function]}
                    >
                      ›
                    </span>
                  </th>
                </tr>
                <tr
                  key="d"
                >
                  <th
                    className="dow"
                    key="Su0"
                  >
                    Su
                  </th>
                  <th
                    className="dow"
                    key="Mo1"
                  >
                    Mo
                  </th>
                  <th
                    className="dow"
                    key="Tu2"
                  >
                    Tu
                  </th>
                  <th
                    className="dow"
                    key="We3"
                  >
                    We
                  </th>
                  <th
                    className="dow"
                    key="Th4"
                  >
                    Th
                  </th>
                  <th
                    className="dow"
                    key="Fr5"
                  >
                    Fr
                  </th>
                  <th
                    className="dow"
                    key="Sa6"
                  >
                    Sa
                  </th>
                </tr>
              </thead>
              <tbody
                key="tb"
              >
                <tr
                  key="6"
                >
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_26"
                    onClick={[Function]}
                  >
                    26
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_27"
                    onClick={[Function]}
                  >
                    27
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_28"
                    onClick={[Function]}
                  >
                    28
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_29"
                    onClick={[Function]}
                  >
                    29
                  </td>
                  <td
                    className="el-datetime-day el-datetime-old"
                    key="11_30"
                    onClick={[Function]}
                  >
                    30
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_1"
                    onClick={[Function]}
                  >
                    1
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_2"
                    onClick={[Function]}
                  >
                    2
                  </td>
                </tr>
                <tr
                  key="13"
                >
                  <td
                    className="el-datetime-day"
                    key="12_3"
                    onClick={[Function]}
                  >
                    3
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_4"
                    onClick={[Function]}
                  >
                    4
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_5"
                    onClick={[Function]}
                  >
                    5
                  </td>
                  <td
                    className="el-datetime-day el-datetime-active el-datetime-today"
                    key="12_6"
                    onClick={[Function]}
                  >
                    6
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_7"
                    onClick={[Function]}
                  >
                    7
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_8"
                    onClick={[Function]}
                  >
                    8
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_9"
                    onClick={[Function]}
                  >
                    9
                  </td>
                </tr>
                <tr
                  key="20"
                >
                  <td
                    className="el-datetime-day"
                    key="12_10"
                    onClick={[Function]}
                  >
                    10
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_11"
                    onClick={[Function]}
                  >
                    11
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_12"
                    onClick={[Function]}
                  >
                    12
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_13"
                    onClick={[Function]}
                  >
                    13
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_14"
                    onClick={[Function]}
                  >
                    14
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_15"
                    onClick={[Function]}
                  >
                    15
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_16"
                    onClick={[Function]}
                  >
                    16
                  </td>
                </tr>
                <tr
                  key="27"
                >
                  <td
                    className="el-datetime-day"
                    key="12_17"
                    onClick={[Function]}
                  >
                    17
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_18"
                    onClick={[Function]}
                  >
                    18
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_19"
                    onClick={[Function]}
                  >
                    19
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_20"
                    onClick={[Function]}
                  >
                    20
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_21"
                    onClick={[Function]}
                  >
                    21
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_22"
                    onClick={[Function]}
                  >
                    22
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_23"
                    onClick={[Function]}
                  >
                    23
                  </td>
                </tr>
                <tr
                  key="34"
                >
                  <td
                    className="el-datetime-day"
                    key="12_24"
                    onClick={[Function]}
                  >
                    24
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_25"
                    onClick={[Function]}
                  >
                    25
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_26"
                    onClick={[Function]}
                  >
                    26
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_27"
                    onClick={[Function]}
                  >
                    27
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_28"
                    onClick={[Function]}
                  >
                    28
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_29"
                    onClick={[Function]}
                  >
                    29
                  </td>
                  <td
                    className="el-datetime-day"
                    key="12_30"
                    onClick={[Function]}
                  >
                    30
                  </td>
                </tr>
                <tr
                  key="41"
                >
                  <td
                    className="el-datetime-day"
                    key="12_31"
                    onClick={[Function]}
                  >
                    31
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_1"
                    onClick={[Function]}
                  >
                    1
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_2"
                    onClick={[Function]}
                  >
                    2
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_3"
                    onClick={[Function]}
                  >
                    3
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_4"
                    onClick={[Function]}
                  >
                    4
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_5"
                    onClick={[Function]}
                  >
                    5
                  </td>
                  <td
                    className="el-datetime-day el-datetime-new"
                    key="1_6"
                    onClick={[Function]}
                  >
                    6
                  </td>
                </tr>
              </tbody>
              <tfoot
                key="tf"
              >
                <tr>
                  <td
                    className="el-datetime-timetoggle"
                    colSpan="7"
                    onClick={[Function]}
                  >
                    2:17 PM
                  </td>
                </tr>
              </tfoot>
            </table>
          </div>
        </DayView>
      </CalendarContainer>
    </div>
  </div>
</DateTime>
`;

exports[`Datetime define timeFormat 1`] = `"2017-12-05T16:00:00.000Z"`;
